Ignore network up/down notifications for localhost connections.

I'm sure I've missed something in this simple implementation, but it
works for me<tm>

BUG:241362